--- a/style.css
+++ b/style.css
@@ -1,23 +1,106 @@
 @font-face {
-    font-family: Comfortaa;
-    src: url(fonts/Comfortaa-VariableFont_wght.woff2);
+  font-family: Comfortaa;
+  src: url(fonts/Comfortaa-VariableFont_wght.woff2);
 }
 
 @font-face {
-    font-family: Sono;
-    src: url(fonts/Sono-VariableFont_MONO,wght.woff2);
+  font-family: Sono;
+  src: url(fonts/Sono-VariableFont_MONOwght.woff2);
+}
+
+@font-face {
+  font-family: Roboto;
+  src: url(fonts/Roboto-Medium.ttf);
 }
 
 body {
-    font-family: Comfortaa;
-    
-    background-color: rgb(4, 4, 15);
-    color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  font-family: Comfortaa;
+
+  background-color: rgb(4, 4, 15);
+  color: white;
+
+  overflow-x: hidden;
+}
+
+header {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
-    font-family: Sono;
-    font-weight: 100;
-    font-size: 5em;
-    letter-spacing: .3em;
+  padding: 1.5em;
+
+  font-family: Roboto;
+  font-weight: 300;
+  font-size: 5em;
+  letter-spacing: 0.3em;
+}
+
+h2 {
+  font-family: Roboto;
+  font-weight: 300;
+}
+
+p {
+  line-height: 1.4em;
+}
+
+section:first-of-type {
+  width: 1200px;
+  height: 1200px;
+}
+
+.noise {
+  margin-top: -25%;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+      circle at 50% 50%,
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 0)
+    ),
+    url("data:image/svg+xml,%3Csvg viewBox='0 0 600 600' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.6' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+  filter: contrast(145%) brightness(650%) invert(100%);
+  mix-blend-mode: screen;
+}
+
+@media all and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
+  .noise {
+    filter: contrast(125%) brightness(650%) invert(100%);
+    mix-blend-mode: color-dodge;
+  }
+}
+
+section:nth-of-type(2) {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+section:nth-of-type(2) figure {
+  width: 100vw;
+}
+
+section:nth-of-type(2) figure img {
+  width: 100%;
+}
+
+section:nth-of-type(2) article {
+  width: 40vw;
+}
+
+.overlap {
+  grid-row-start: 1;
+  grid-column-start: 1;
 }
