--- a/style.css
+++ b/style.css
@@ -94,13 +94,52 @@ section:nth-of-type(2) figure {
 
 section:nth-of-type(2) figure img {
   width: 100%;
+  box-shadow: inset 0em 0em 2em 2em rgb(4, 4, 15);
 }
 
 section:nth-of-type(2) article {
-  width: 40vw;
+  width: 30vw;
+  position: relative;
+  left: 105em;
+  top: 30em;
 }
 
 .overlap {
   grid-row-start: 1;
   grid-column-start: 1;
+}
+
+/* Spacejunk */
+section.spacejunk {
+  margin-top: 12em;
+  height: 25em;
+  width: 100vw;
+  padding: 2em;
+
+  overflow: hidden;
+}
+
+#debris-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+  /* overflow: hidden; */
+}
+
+.spacejunk img.debris {
+  position: absolute;
+  left: 100%;
+  margin-top: 1em;
+
+  animation: debrisAnimation 20s linear;
+}
+
+@keyframes debrisAnimation {
+  from {
+    transform: translateX(100vw) rotate(0deg);
+  }
+  to {
+    transform: translateX(-100vw) rotate(360deg);
+  }
 }
