--- a/style.css
+++ b/style.css
@@ -49,8 +49,17 @@ h1 {
 }
 
 h2 {
+  letter-spacing: 0.1em;
+  font-size: 3em;
+}
+
+h3 {
   font-family: Roboto;
-  font-weight: 300;
+  letter-spacing: 0.25em;
+}
+
+h4 {
+  letter-spacing: 0.1em;
 }
 
 p {
@@ -140,4 +149,40 @@ section.spacejunk {
   to {
     transform: translateX(-100vw) rotate(360deg);
   }
+}
+
+/* Solutions */
+section.solutions {
+  margin-top: 25em;
+  width: 50vw;
+}
+
+span {
+  display: flex;
+  justify-content: center;
+}
+
+span button {
+  margin: 2em;
+  width: 5em;
+  height: 5em;
+
+  font-family: Roboto;
+  font-size: 1em;
+  letter-spacing: 0.25em;
+
+  color: white;
+  background-color: transparent;
+
+  border: 0.1em solid white;
+  border-radius: 50%;
+
+  cursor: pointer;
+  transition: 0.25s;
+}
+
+span button:hover {
+  color: lightskyblue;
+  box-shadow: 3px 3px lightblue;
+  border-color: lightskyblue;
 }
