--- a/style.css
+++ b/style.css
@@ -134,17 +134,26 @@ section:first-of-type {
 /* ------------------------
 HUD
 ------------------------ */
-.hud {
+#hud {
   position: fixed;
   top: 4em;
-  left: 4em;
+  left: 0em;
   width: 15em;
   height: 13em;
-  padding: 1em;
+  padding: 1.5em;
   z-index: 10;
 
-  border-radius: 10px;
-  background-color: rgb(39, 39, 39, 0.7);
+  border-bottom: 2px white solid;
+  border-right: 2px white solid;
+  border-top: 2px white solid;
+
+  background-color: rgba(0, 0, 0, 0.7);
+
+  transition: transform 0.4s ease-in-out;
+}
+
+aside .hidden {
+  transform: translateX(-100%);
 }
 
 .bar {
@@ -161,6 +170,18 @@ HUD
 
   margin: 2px;
   background-color: white;
+}
+
+.low-health {
+  animation: lowHealthAnimation 1s linear infinite;
+}
+
+@keyframes lowHealthAnimation {
+  from {
+    background-color: red;
+  }
+  to {
+  }
 }
 
 /* ------------------------
