added second debris container

--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ section.spacejunk {
   overflow: hidden;
 }
 
-#debris-container {
+.debris-containers {
   position: relative;
   width: 100%;
   height: 100%;
