--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ Scrollbar
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background-color: transparent;
+  background-color: black;
 }
 
 /* Handle */
@@ -80,6 +80,16 @@ main {
 /* ------------------------
 Headings & text
 ------------------------ */
+h1 {
+  padding: 1.5em;
+  width: 100%;
+  white-space: nowrap;
+
+  font-family: Roboto;
+  font-weight: 300;
+  font-size: 5em;
+  letter-spacing: 0.3em;
+}
 
 h2 {
   /* font-family: Roboto; */
@@ -103,16 +113,7 @@ p {
 /* ------------------------
 Home screen
 ------------------------ */
-h1 {
-  padding: 1.5em;
-  width: 100%;
-  white-space: nowrap;
-
-  font-family: Roboto;
-  font-weight: 300;
-  font-size: 5em;
-  letter-spacing: 0.3em;
-
+header h1 {
   animation: titleAnimation 3s ease-out;
 }
 
@@ -246,6 +247,73 @@ section:nth-of-type(2) article {
 }
 
 /* ------------------------
+Warning banner
+------------------------ */
+
+.warning-banner {
+  display: flex;
+  justify-content: space-around;
+  width: 60em;
+  height: 14em;
+  margin-top: 15em;
+
+  background-image: url("images/warning_banner.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  text-align: center;
+  overflow: hidden;
+
+  animation: warningAnimation 2s infinite;
+}
+
+.warning-banner img {
+  width: 9em;
+  height: 9em;
+  margin-top: 2em;
+  margin-bottom: 2em;
+
+  filter: drop-shadow(0 0 0.75rem crimson);
+
+  animation: warningAnimation2 4s linear infinite;
+}
+
+.warning-banner h1 {
+  text-shadow: 0px 0px 10px red;
+  margin: 0.5em 0 0.5em 0;
+  padding: 0;
+
+  font-size: 4em;
+}
+
+.warning-banner h2 {
+  text-shadow: 0px 0px 10px red;
+
+  font-size: 2em;
+}
+
+@keyframes warningAnimation {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes warningAnimation2 {
+  0% {
+    transform: translateY(-150%);
+  }
+  100% {
+    transform: translateY(200%);
+  }
+}
+
+/* ------------------------
 Interactive space debris
 ------------------------ */
 
@@ -352,6 +420,23 @@ div.solution_btns button.btn_active:hover {
 .invis {
   display: none;
 }
+
+/* ------------------------
+3D
+------------------------ */
+
+.threejs-container {
+  position: relative;
+}
+
+.threejs-section {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 500px; /* Adjust the height as needed */
+}
+
 /* ------------------------
 Media queries
 ------------------------ */
