--- a/style.css
+++ b/style.css
@@ -170,6 +170,65 @@ section:first-of-type {
 }
 
 /* ------------------------
+DEATH SCREEN
+------------------------ */
+#death-screen {
+  position: fixed;
+  z-index: 50;
+  width: 30%;
+  height: 40%;
+  left: 35%;
+  top: 25%;
+
+  border-radius: 20px;
+
+  background-color: black;
+  display: none;
+}
+
+#death-screen div {
+  margin: 1em;
+  height: 87%;
+  padding: 1em;
+
+  background: linear-gradient(to right, white 3px, transparent 3px) 0 0,
+    linear-gradient(to right, white 3px, transparent 3px) 0 100%,
+    linear-gradient(to left, white 3px, transparent 3px) 100% 0,
+    linear-gradient(to left, white 3px, transparent 3px) 100% 100%,
+    linear-gradient(to bottom, white 3px, transparent 3px) 0 0,
+    linear-gradient(to bottom, white 3px, transparent 3px) 100% 0,
+    linear-gradient(to top, white 3px, transparent 3px) 0 100%,
+    linear-gradient(to top, white 3px, transparent 3px) 100% 100%;
+
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  border-radius: 8px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+}
+
+#death-screen div button {
+  padding: 1em 3em;
+
+  color: black;
+  background-color: white;
+  font-family: Comfortaa;
+  font-weight: 700;
+  font-size: 2em;
+
+  border-radius: 10px;
+
+  cursor: pointer;
+  transition: 0.25s;
+}
+
+#death-screen div button:hover {
+  transform: scale(0.95);
+}
+/* ------------------------
 HUD
 ------------------------ */
 #hud {
@@ -424,12 +483,21 @@ Future
 ------------------------ */
 section.future {
   margin-top: 25em;
-  width: 50vw;
+  width: 40vw;
 }
 
 /* ------------------------
 Kinds of space debris
 ------------------------ */
+.center {
+  align-content: center;
+  text-align: center;
+}
+
+.center p {
+  margin: 0 20% 0 20%;
+}
+
 section.what-debris {
   width: 100vw;
   margin-bottom: 20em;
@@ -512,8 +580,6 @@ section.what-debris img#earth {
   background-repeat: no-repeat;
   background-size: 20px 20px;
   border-radius: 8px;
-
-  /* display: none; */
 
   transition: 1s;
 }
@@ -602,7 +668,25 @@ div.solution_btns button.btn_active:hover {
 
 .option {
   margin-top: 3em;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  justify-items: center;
+  align-items: center;
+
+  padding: 0.1em 1em 0.5em 1.5em;
+  background: linear-gradient(to right, white 3px, transparent 3px) 0 0,
+    linear-gradient(to right, white 3px, transparent 3px) 0 100%,
+    linear-gradient(to left, white 3px, transparent 3px) 100% 0,
+    linear-gradient(to left, white 3px, transparent 3px) 100% 100%,
+    linear-gradient(to bottom, white 3px, transparent 3px) 0 0,
+    linear-gradient(to bottom, white 3px, transparent 3px) 100% 0,
+    linear-gradient(to top, white 3px, transparent 3px) 0 100%,
+    linear-gradient(to top, white 3px, transparent 3px) 100% 100%;
+
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  border-radius: 8px;
 }
 
 .option div:first-of-type {
@@ -610,28 +694,13 @@ div.solution_btns button.btn_active:hover {
 }
 
 .option img {
-  width: 50em;
+  width: 35em;
+  padding: 1em;
 }
 
 .invis {
   display: none;
 }
-
-/* ------------------------
-3D
------------------------- */
-
-/* .threejs-container {
-  position: relative;
-}
-
-.threejs-section {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 500px;
-} */
 
 /* ------------------------
 Media queries
